--- a/src/app/minecraft-gui/minecraft-banner/minecraft-banner.component.html
+++ b/src/app/minecraft-gui/minecraft-banner/minecraft-banner.component.html
@@ -9,10 +9,10 @@
         Right: Connection info
     -->
     <div class="row">
-        <app-icon #icon
+        <app-minecraft-icon #icon
         [customIcon]="customFavicon ?? 'https://api.pixelcampus.space/api/minecraft/icon.png'"
                   (ClickAction)="ClickAction.emit()">
-        </app-icon>
+        </app-minecraft-icon>
 
         <div class="text-column">
             <div class="server-name">
