--- a/src/app/minecraft-gui/minecraft-button/minecraft-button.component.html
+++ b/src/app/minecraft-gui/minecraft-button/minecraft-button.component.html
@@ -13,7 +13,7 @@
         <div class="corner-top-right sprite"></div>
         <div class="corner-bottom-left sprite"></div>
         <div class="content">
-            {{ content ?? 'Button' }}
+            <ng-content></ng-content>
         </div>
     </div>
 </div>
