--- a/src/app/info-popup/info-popup.component.scss
+++ b/src/app/info-popup/info-popup.component.scss
@@ -38,7 +38,7 @@ $spread-radius: -5px;
     width: 100%;
     height: 100%;
 
-    background-image: url('/assets/dirt.png') !important;
+    background-image: url('/assets/background/background-180.png') !important;
     background-size: 80px 80px !important;
     image-rendering: pixelated !important;
 
@@ -53,9 +53,9 @@ $spread-radius: -5px;
     font-family: Minecraft Regular;
 
     -moz-box-shadow:    inset $x-offset $y-offset $blur-radius $spread-radius black,
-                        inset $x-offset -$y-offset $blur-radius $spread-radius black;
+                        inset $x-offset (-$y-offset) $blur-radius $spread-radius black;
     -webkit-box-shadow: inset $x-offset $y-offset $blur-radius $spread-radius black,
-                        inset $x-offset -$y-offset $blur-radius $spread-radius black;
+                        inset $x-offset (-$y-offset) $blur-radius $spread-radius black;
     box-shadow:         inset $x-offset $y-offset $blur-radius $spread-radius black;
 }
 
@@ -66,7 +66,7 @@ $spread-radius: -5px;
     align-items: center;
 
     width: 100%;
-    height: calc(100% - 64px);
+    height: 100%;
 
     overflow-y: scroll;
     overflow-x: hidden;
@@ -99,24 +99,6 @@ $spread-radius: -5px;
     -moz-box-shadow: 0px 0px 10px 5px black;
     -webkit-box-shadow: 0px 0px 10px 5px black;
     box-shadow: 0px 0px 10px 5px black;
-}
-
-.bottom {
-    position: fixed;
-
-    bottom: 0px;
-    left: calc(50% - 175px);
-
-    display: flex;
-    flex-direction: row;
-
-    justify-content: center;
-    align-items: center;
-
-    width: 350px;
-    height: 50px;
-
-    margin-bottom: 25px;
 }
 
 h1 {
