--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,9 +35,14 @@
         <app-minecraft-button class="button"
                               (ClickAction)="openLink('https://www.inf.reutlingen-university.de/')"
                               [style.width]="'200px'">
-          University
+          Our University
         </app-minecraft-button>
-
+        <!-- Source Code -->
+        <app-minecraft-button class="button"
+                              (ClickAction)="openLink('https://github.com/frederikbeimgraben/PixelCampus')"
+                              [style.width]="'200px'">
+          Source Code
+        </app-minecraft-button>
       </div>
     }
   </div>
