--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -30,24 +30,24 @@
         </app-minecraft-button>
       } @else {
         <div class="footer-row">
-          <!-- Mail Button: frederik@beimgraben.net -->
+          <!-- Mail Button: support@pixelcampus.space -->
           <app-minecraft-button class="button"
-                                (ClickAction)="openLink('mailto:frederik@beimgraben.net')"
+                                (ClickAction)="openLink('mailto:support@pixelcampus.space')"
                                 [style.width]="'200px'">
           Contact Us
           </app-minecraft-button>
           <!-- Fakultät -->
-          <app-minecraft-button class="button"
+          <!--app-minecraft-button class="button"
                                 (ClickAction)="openLink('https://www.inf.reutlingen-university.de/')"
                                 [style.width]="'200px'">
             Our University
-          </app-minecraft-button>
+          </app-minecraft-button-->
           <!-- Source Code -->
-          <app-minecraft-button class="button"
+          <!--app-minecraft-button class="button"
                                 (ClickAction)="openLink('https://github.com/frederikbeimgraben/PixelCampus')"
                                 [style.width]="'200px'">
             Source Code
-          </app-minecraft-button>
+          </app-minecraft-button-->
         </div>
       }
     </div>
