--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,8 @@
 .body {
     height: 100%;
 }
-html, body { height: 100%; }
+html, body { 
+    height: 100%;
+    overflow: hidden;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
