--- a/src/app/common-gui/wiki/wiki-content/wiki-content.component.html
+++ b/src/app/common-gui/wiki/wiki-content/wiki-content.component.html
@@ -1,1 +1,1 @@
-<app-wiki-content-items [items]="parsed"></app-wiki-content-items>
+<app-wiki-content-items [items]="content ?? []"></app-wiki-content-items>
