--- a/src/app/wiki/wiki.component.html
+++ b/src/app/wiki/wiki.component.html
@@ -7,7 +7,7 @@
     <app-wiki-page 
         [title]="pages[page]"
         [shadowType]="navShown">
-        <app-wiki-content [content]="content">
+        <app-wiki-content [content]="parsed">
 
         </app-wiki-content>
     </app-wiki-page>
