--- a/src/app/common-gui/wiki/wiki-page/wiki-page.component.scss
+++ b/src/app/common-gui/wiki/wiki-page/wiki-page.component.scss
@@ -28,12 +28,40 @@
     overflow-y: scroll;
     overflow-x: hidden;
 
+    -ms-overflow-style: none;  /* IE and Edge */
+
+    scrollbar-color: #ffffff rgba(0, 0, 0, 0);
+
     background-color: rgba(0, 0, 0, 0.40);
     background-blend-mode: multiply;
 
     padding: 20px;
 
     padding-left: calc(20px + 64px);
+}
+
+::-webkit-scrollbar {
+    // Background color
+    background-color: rgba(0, 0, 0, 0);
+
+    // Subelements
+    &-thumb {
+        // Background color
+        background: url('/assets/button/background.png') !important;
+        background-size: 80px 80px !important;
+        image-rendering: pixelated !important;
+        background-repeat: repeat;
+
+        // Border
+        border: 2px solid black;
+
+        // White border on hover
+        &:hover {
+            border: 3px solid white;
+        }
+    }
+
+    width: 16px;
 }
 
 .content-hidden {
