--- a/src/app/wiki/wiki.component.html
+++ b/src/app/wiki/wiki.component.html
@@ -5,7 +5,7 @@
         (shownChange)="navShown = $event">
     </app-side-navigator>
     <app-wiki-page 
-        [title]="pages[page]"
+        [title]="titles[page]"
         [shadowType]="navShown">
         <app-wiki-content [content]="parsed">
 
