--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -18,7 +18,7 @@
         [id]="registerBanner(bluemap, 'bluemap')">
       </app-minecraft-banner>
       <!-- Wiki -->
-      <app-minecraft-banner #wiki
+      <!--app-minecraft-banner #wiki
         [customTitle]="'Wiki'"
         [customLatency]="-1"
         [customDescription]="'Unsere Wiki<br />-> wiki.pixelcampus.space'"
@@ -26,7 +26,7 @@
         (ClickAction)="selectItem('wiki')"
         (click)="activate('wiki'); $event.stopPropagation()"
         [id]="registerBanner(wiki, 'wiki')">
-      </app-minecraft-banner>
+      </app-minecraft-banner-->
       <!-- Discord -->
       <app-minecraft-banner #discord
         [customTitle]="'Discord'"
@@ -36,6 +36,15 @@
         (ClickAction)="selectItem('discord')"
         (click)="activate('discord'); $event.stopPropagation()"
         [id]="registerBanner(discord, 'discord')">
+      </app-minecraft-banner>
+      <app-minecraft-banner #wiki
+        [customTitle]="'Wiki'"
+        [customLatency]="-1"
+        [customDescription]="'Unsere Wiki.<br />-> wiki.pixelcampus.space'"
+        [customFavicon]="'/assets/items/written_book.png'"
+        (ClickAction)="selectItem('wiki')"
+        (click)="activate('wiki'); $event.stopPropagation()"
+        [id]="registerBanner(wiki, 'wiki')">
       </app-minecraft-banner>
     </div>
   </div>
