--- a/src/app/common-gui/wiki/side-navigator/side-navigator.component.html
+++ b/src/app/common-gui/wiki/side-navigator/side-navigator.component.html
@@ -1,43 +1,76 @@
 @if (ready) {
-    <div [class]="['navigator', show ? 'navigator-expanded' : 'navigator-hidden']"
-        (mouseenter)="onEnter()"
-        (mouseleave)="onLeave()">
+    @if (isMobile) {
         <div class="navigator-show-hide-button"
             (click)="onShowClick()">
-            <img [src]="compass" class="icon"/>
+            <img [src]="currentIcon" class="icon"/>
         </div>
 
-        <!-- Return to main page -->
-        <div [class]="'nav-item'"
-            (click)="goHome()">
-            @if (show) {
-                <div class="navigator-item-text">
-                    Home
-                </div>
-            } @else {
+        <!-- Render all items with full width -->
+        <div [class]="['navigator-mobile', show ? 'navigator-expanded-mobile' : 'navigator-hidden-mobile']"
+             (click)="hide()">
+            <!-- Return to main page -->
+            <div [class]="'nav-item-mobile'"
+                 (click)="goHome()">
                 <!-- Icon -->
                 <div class="navigator-item-icon">
                     <img src="/assets/items/filled_map.png" class="icon" />
                 </div>
-            }
-        </div>
-        <!-- Render all items -->
-        @for (item of pages; track item.id) {
-            <div [class]="['nav-item', item.active ? 'selected' : '', show ? 'navigator-item-expanded' : 'navigator-item-hidden']"
-                    (click)="onItemClick(item)"
-                    (mouseover)="tempIndex=item.index"
-                    (mouseleave)="tempIndex=index">
-                @if (show) {
-                    <div class="navigator-item-text">
-                        {{item.title}}
-                    </div>
-                } @else {
+                <div class="navigator-item-text-mobile">
+                    Landing Page
+                </div>
+            </div>
+
+            @for (item of pages; track item.id; let i = $index) {
+                <div [class]="['nav-item-mobile', i == index ? 'selected' : '']"
+                     (click)="onItemClick(item)">
                     <!-- Icon -->
                     <div class="navigator-item-icon">
                         <img [src]="item.icon_str" class="icon" />
                     </div>
+                    <!-- Text -->
+                    <div class="navigator-item-text-mobile">
+                        {{item.title}}
+                    </div>
+                </div>
+            }
+        </div>
+    } @else {
+        <div [class]="['navigator', show ? 'navigator-expanded' : 'navigator-hidden']"
+            (mouseenter)="onEnter()"
+            (mouseleave)="onLeave()">
+    
+            <!-- Return to main page -->
+            <div [class]="'nav-item'"
+                 (click)="goHome()">
+                @if (show) {
+                    <div class="navigator-item-text">
+                        Landing Page
+                    </div>
+                } @else {
+                    <!-- Icon -->
+                    <div class="navigator-item-icon">
+                        <img src="/assets/items/filled_map.png" class="icon" />
+                    </div>
                 }
             </div>
-        }
-    </div>
+            <!-- Render all items -->
+            @for (item of pages; track item.active; let i = $index) {
+                <div [class]="['nav-item', i == index ? 'selected' : '', show ? 'navigator-item-expanded' : 'navigator-item-hidden']"
+                        (click)="onItemClick(item)"
+                        (mouseover)="tempIndex=item.index"
+                        (mouseleave)="tempIndex=index">
+                    @if (show) {
+                        <div class="navigator-item-text">
+                            {{item.title}}
+                        </div>
+                    } @else {
+                        <!-- Icon -->
+                        <div class="navigator-item-icon">
+                            <img [src]="item.icon_str" class="icon" />
+                        </div>
+                    }
+                </div>
+            }
+        </div>
+    }
 }
